# ant-colony-and-genetic-algorithm

./: LICENSE
caixeiro-game-master/: .gitignore  README.md  main.py  pyproject.toml
caixeiro-game-master/core/: base_solver.py
caixeiro-game-master/data/: cities-default.json  cities.json  loader.py
caixeiro-game-master/solvers/: aco_solver.py  genetic_algorithm.py
caixeiro-game-master/src/: generate_dataset.py  tsp.py  ui.py
caixeiro-game-master/tests/: test_genetic_algorithm.py
caixeiro-game-master/ui/: manager.py
caixeiro-game-master/utils/: Plots.py
